# OrbitalAI

./: README.md  pyproject.toml
examples/cfour/: 3A_sp
examples/qchem/: CCO_opt_State1Ad_EOMDIP_trip.out  CCO_opt_State1Ad_EOMDIP_trip.zmat  CCO_opt_State1Add_EOMIP.out  CCO_opt_State1Add_EOMIP.zmat  CCO_opt_State2Ad_EOMDIP_sing.out  CCO_opt_State2Ad_EOMDIP_sing.zmat  CCO_opt_na_wb.out  CCO_opt_na_wb.zmat  sample.out
q_ai/: __init__.py  cli.py
q_ai/analysis/: assistant.py
q_ai/parser/: cfour.py  qchem.py
tests/: \  test_qchem.py
