[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "Q-AI"
version = "0.1.0"
description = "Quantum chemistry parsing and analysis tools."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Bibhas Borah" },
]

[tool.setuptools.packages.find]
include = ["q_ai*"]

[project.scripts]
totalenergy = "q_ai.cli:totalenergy"
chemistry-summary = "q_ai.cli:summarize"
fZMT = "q_ai.cli:zmat"
